tests/resource/valid/operation/greater_than_other_int.mamba
class MyClass(def a: Int)
    def f(self, other: MyClass) -> Bool => self.a > other.a

def a := MyClass(10)
def b := MyClass(20)

a.f(b)
