tests/resource/invalid/type/definition/assign_to_inner_non_mut.mamba
class A
    def c: C

class C
    def my_class: D := D()
    def my_field_accessor(self) -> D => self.my_class

class D
    def fin my_field: Int := 10

def a := A()
a.c.my_field_accessor().mmy_field := 20
